add settings for discord RPC extention
mostly for me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "Lua.diagnostics.disable": ["undefined-global", "unknown-symbol"],
     "lua.targetVersion": "5.1",
     "Lua.runtime.version": "Lua 5.1",
-    "Lua.runtime.unicodeName": true
+    "Lua.runtime.unicodeName": true,
+    "discord.removeLowerDetails": false
 }
