--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-    "recommendations": ["sumneko.lua", "trixnz.vscode-lua"]
+    "recommendations": [
+        "sumneko.lua",
+        "trixnz.vscode-lua",
+        "bierner.markdown-preview-github-styles",
+        "yzhang.markdown-all-in-one",
+        "davidanson.vscode-markdownlint"
+    ]
 }
